# monopoly

./: .gitignore  CMakeLists.txt
Board/: CMakeLists.txt  board.cpp  board.h  main.cpp  plansza1.txt
Board/board_tests/: test.cpp
Cards/: CMakeLists.txt  cards.cpp  cards.h  deck.txt  show_cards.cpp
ConsoleView/: CMakeLists.txt  consoleview.cpp  consoleview.h
Dices/: CMakeLists.txt  dices.cpp  dices.h  show_dices.cpp
Menu/: CMakeLists.txt  menu.cpp  menu.h  show_menu.cpp
Player/: CMakeLists.txt  custom_exceptions.h  main.cpp  player.cpp  player.h  player_driver.cpp  player_driver.h
_zadanie_4/: README.md
_zadanie_4/Board/: board.cpp  board.h  main.cpp  plansza1.txt
_zadanie_4/Cards/: cards.cpp  cards.h  deck.txt  show_cards.cpp
_zadanie_4/Player/: CMakeLists.txt  human_bot.cpp  main.cpp  player.cpp  player.h
_zadanie_4/Player/Google_tests/: CMakeLists.txt  test_player.cpp
tests/Google/: test_player.cpp
